--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,10 @@ dependencies:
   firebase_auth: ^4.6.1
   google_sign_in: ^6.1.0
   provider: ^6.0.5
-  http: ^1.0.0
+  # http: ^1.0.0
   # google_maps_flutter: ^2.3.0
   android_intent_plus: ^4.0.1
+  firebase_storage: ^11.2.2
 
 dev_dependencies:
   flutter_test:
