--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,16 @@ dependencies:
   firebase_auth: ^4.6.1
   google_sign_in: ^6.1.0
   provider: ^6.0.5
-  # http: ^1.0.0
+  # open_street_map_search_and_pick: ^0.0.17
+  http: ^0.13.3
   # google_maps_flutter: ^2.3.0
   android_intent_plus: ^4.0.1
   firebase_storage: ^11.2.2
+  location: ^4.4.0
+  geolocator: ^9.0.2
+  flutter_map: ^0.14.0
+  latlong2: ^0.8.0
+  # flutter_map_marker_cluster: ^1.2.0
 
 dev_dependencies:
   flutter_test:
