--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   geolocator: ^9.0.2
   flutter_map: ^0.14.0
   latlong2: ^0.8.0
+  cached_network_image: ^3.2.3
   # flutter_map_marker_cluster: ^1.2.0
 
 dev_dependencies:
