--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   cached_network_image: ^3.2.3
   url_launcher: ^6.0.10
   flutter_linkify: ^6.0.0
+  shared_preferences: ^2.0.6
   
   # flutter_open_whatsapp: ^0.1.2
   # flutter_map_marker_cluster: ^1.2.0
