--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/LOGO.png
+    - images/poster.png
+    - images/Picture1.jpg
+    - images/Picture3.jpg
+    - images/Picture12.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
